# draco

./: .env-example  .gitignore  Cargo.toml  GUIDE.md  README.md
.github/workflows/: build-and-test.yml  ci.yml  rust.yml
adapter/cron/: Cargo.toml
adapter/cron/src/: main.rs
adapter/rest/: Cargo.toml
adapter/rest/src/: .env  config.rs  content_type.rs  main.rs  response.rs  route.rs  types.rs
adapter/rest/src/auth/: credentials.rs  jwt.rs  mod.rs  settings.rs  types.rs
adapter/rest/src/config/: mod.rs
adapter/rest/src/queue/: mod.rs
adapter/rest/src/request/: input.rs  mod.rs
adapter/rest/src/response/: mod.rs
adapter/rest/src/store/: mod.rs
crates/base/: Cargo.toml
crates/base/src/: config.rs  lib.rs  runner.rs  store.rs  traits.rs
crates/base/src/client/: mod.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/http/: Cargo.toml
crates/http/src/: request.rs  response.rs  server.rs
crates/validator/: Cargo.toml
crates/validator/src/: lib.rs
crates/validator/src/resolver/: flow_resolver.rs
crates/validator/src/rules/: contains_key.rs  contains_type.rs  item_of_collection.rs  mod.rs  number_range.rs  regex.rs  violation.rs
definitions/: rest.md
docs/: index.mdx  meta.json
draco_base/: Cargo.toml
draco_base/src/: lib.rs
draco_body/: Cargo.toml
draco_body/src/: lib.rs
draco_body/src/rules/: contains_key.rs  regex.rs
draco_rest/: Cargo.toml
draco_rest/src/: .env  http.rs  main.rs
draco_rest/src/http/: request.rs  server.rs
draco_rest/src/queue/: mod.rs
draco_rest/src/store/: mod.rs
draco_validator/: Cargo.toml
draco_validator/src/: lib.rs
draco_validator/src/path/: mod.rs
draco_validator/src/resolver/: flow_resolver.rs  mod.rs
draco_validator/src/rules/: contains_key.rs  mod.rs  regex.rs  violation.rs
helper/flow/: Cargo.toml
helper/flow/src/: main.rs
helper/flow/src/typed_data_types/: mod.rs
helper/flow/src/typed_flows/: add_flow.rs  mod.rs  mutiply_flow.rs
