[workspace]
members = [
    "crates/config",
    "crates/http",
    "crates/validator",
    "adapter/rest",
    "helper/flow",
]

[workspace.package]
version = "0.0.0"
edition = "2021"

[workspace.dependencies]
code0-flow = { version = "0.0.9", features = ["all"] }
tucana = { version = "0.0.21", features = ["aquila"] }
serde_json = { version = "1.0.138" }
serde = "1.0.219"
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11.1"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
redis = { version = "0.30.0", features = [
    "aio",
    "tokio-comp",
    "async-std-comp",
    "json",
] }
uuid = { version = "1.16.0", features = ["v4"] }
tonic = "0.13.0"

[workspace.dependencies.config]
path = "../draco/crates/config"

[workspace.dependencies.http]
path = "../draco/crates/http"

[workspace.dependencies.validator]
path = "../draco/crates/validator"
