[workspace]
members = [ "adapter/cron","adapter/rest", "crates/base"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
code0-flow = { version = "0.0.26" }
tucana = { version = "0.0.54", features = ["aquila"] }
serde_json = { version = "1.0.138" }
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11.1"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
uuid = { version = "1.16.0", features = ["v4"] }
tonic = "0.14.0"
async-nats = "0.46.0"
async-trait = "0.1.88"
anyhow = "1.0.98"
prost = "0.14.0"
tonic-health = "0.14.0"
futures-lite = "2.6.1"
chrono = "0.4.42"
cron = "0.15.0"

[workspace.dependencies.base]
path = "../draco/crates/base"
