[package]
name = "draco_rest"
version = "0.1.0"
edition = "2021"

[dependencies]
draco_base = { workspace = true }
draco_validator = { workspace = true }
code0-flow = { workspace = true }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
redis = { version = "0.29.0", features = [
    "aio",
    "tokio-comp",
    "async-std-comp",
    "json",
] }
tucana = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }
