[package]
name = "cron"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = {workspace = true}
cron-parser = {workspace = true}
chrono = {workspace = true}
cron = {workspace = true}
async-nats = {workspace = true}
base = {workspace = true}
tucana = {workspace = true}
async-trait =  {workspace = true}
anyhow = {workspace = true}