[package]
name = "rest"
version = "0.1.0"
edition.workspace = true

[dependencies]
http = { workspace = true }
validator = { workspace = true }
code0-flow = { workspace = true }
tokio = { workspace = true }
tucana = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tonic = { workspace = true }
base = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
