[package]
name = "rest"
version.workspace = true
edition.workspace = true

[dependencies]
code0-flow = { workspace = true }
tokio = { workspace = true }
tucana = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
tonic = { workspace = true }
base = { workspace = true }
anyhow = { workspace = true }
hyper-util = "0.1.19"
hyper = "1.8.1"
http-body-util = "0.1.3"
prost = { workspace = true }
