[package]
name = "base"
version.workspace = true
edition.workspace = true

[dependencies]
async-nats = { workspace = true }
tucana = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
async-trait = { workspace = true }
code0-flow = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
futures-lite = { workspace = true }
